# cppserver

./: .gitignore  Makefile  README.md  longcharTest.txt
.github/workflows/: cmake-single-platform.yml
day00/: client.cpp  makefile  readme  server.cpp
day01/: client.cpp  readme  server.cpp
day02/: server.cpp
day03/: makefile  readme  server.cpp
day04-Channel/: Channel.cpp  Channel.h  makefile  readme  server.cpp
day05-EventDriver/: client.cpp  makefile  readme  server.cpp
day05-EventDriver/include/: Server.cpp  Server.h  util.h
day06-Acceptor/: readme
day06-Acceptor/include/: Acceptor.h  Server.cpp  Server.h  Socket.cpp  Socket.h
day07-Connection/: readme
day07-Connection/include/: Connection.cpp  Connection.h  EventLoop.h
day08-Buffer/: client.cpp  makefile  readme
day08-Buffer/include/: Acceptor.cpp  Acceptor.h  Connection.h
day09-ThreadPool/: client.cpp  makefile  readme
day09-ThreadPool/include/: EventLoop.cpp  EventLoop.h  Server.cpp  Server.h  ThreadPool.h
day10-Test/: ThreadPoolTest.cpp  client.cpp  readme
day10-Test/include/: Acceptor.cpp  InetAddress.cpp
day11/: makefile  server.cpp  test.cpp
day11/include/: Channel.cpp  Channel.h  Client.cpp  Connection.cpp  Epoll.cpp  InetAddress.h  ThreadPool.h
day14/src/: Acceptor.cpp  Buffer.cpp  Channel.cpp  Client.cpp  Connection.cpp  Epoll.cpp  EventLoop.cpp  InetAddress.cpp  Server.cpp  Socket.cpp  ThreadPool.cpp
day14/src/include/: Acceptor.h  Buffer.h  Channel.h  Connection.h  Epoll.h  EventLoop.h  InetAddress.h  Macros.h  Server.h  Socket.h  ThreadPool.h
day14/test/: server.cpp  single_client.cpp
demo-fileserver/config/: config.toml
demo-fileserver/learn/: CMakeLists.txt
demo-fileserver/learn/Test/: client.cpp  client2.cpp  consumer.cpp  epoll.cpp  fileclient.cpp  fileserver.cpp  learn.cpp  op_file.cpp  poll.cpp  producer.cpp  select_.cpp  server.cpp  server2.cpp  server_multi_process.cpp  tmp.cpp
demo-fileserver/learn/src/: squeue.cpp
demo-fileserver/learn/src/include/: mysocket.h  squeue.h  util.h
demo-httpserver/: .gitignore  CMakeLists.txt  README.md
demo-httpserver/Test/: client.cpp  clientto9007.cpp  hello.cpp  httpepoll.cpp  tcpepoll.cpp
demo-httpserver/config/: config.toml
demo-httpserver/include/: config.h  http.h  util.h
demo-httpserver/lib/: util.cpp
demo-httpserver/resource/error/: error.html
demo-httpserver/resource/html/: index.html
demo-httpserver/resource/old/: index.html
src/: CMakeLists.txt  Epoll.cpp  Epoll.h  client.cpp  readme  server.cpp
src/include/: Acceptor.cpp  Buffer.cpp  Buffer.h  EventLoop.cpp  ThreadPool.cpp  util.cpp
src/src/: Acceptor.cpp  Buffer.cpp  CMakeLists.txt  InetAddress.cpp  ThreadPool.cpp
src/src/include/: Acceptor.h  Buffer.h  Client.h  Epoll.h  InetAddress.h
src/test/: multiple_client.cpp
udp/day1/: client.cpp  readme  server.cpp
udp/linux/day1/: client.cpp  client_config.txt  makefile  server.cpp  server_config.txt
udp/test/: longchar  longchar.cc
udp/window/: client.cpp  makefile  server.cpp  util.cpp  util.h
